Fixed custom metrics not visible

--- a/www/assets/css/pagestyle2.css
+++ b/www/assets/css/pagestyle2.css
@@ -8988,8 +8988,7 @@ wpt-header .wptheader_nav_menu_section a.banner_lfwp:hover {
 }
 
 .scrollableLine {
-  overflow: scroll;
-  height: 2em;
+  overflow: auto;
   white-space: nowrap;
 }
 
